Changed the title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            Etch-A-Sketch
+            CalcUlatoR
         </title>
         <link rel="stylesheet" href="./styles/style.css">
     </head>
