Display and Keypad divs

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     </head>
     <body>
         <main>
-            
+            <div id="display">
+
+            </div>
+            <div id="keypad">
+                
+            </div>
         </main>
     </body>
 </html>
