Keypad Design plus buttons - first cut

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
             CalcUlatoR
         </title>
         <link rel="stylesheet" href="./styles/style.css">
+        <link rel="stylesheet" href="./styles/button.css">
     </head>
     <body>
         <main>
@@ -12,7 +13,24 @@
 
             </div>
             <div id="keypad">
-                
+                <button id="all-clear" class="special">AC</button>
+                <button id="clear" class="special">C</button>
+                <button id="change-sign" class="special">+/-</button>
+                <button id="divide" class="special">/</button>
+                <button id="seven" class="number">7</button>
+                <button id="eight" class="number">8</button>
+                <button id="nine" class="number">9</button>
+                <button id="multiply" class="special">*</button>
+                <button id="four" class="number">4</button>
+                <button id="five" class="number">5</button>
+                <button id="six" class="number">6</button>
+                <button id="subtract" class="special">-</button>
+                <button id="one" class="number">1</button>
+                <button id="two" class="number">2</button>
+                <button id="three" class="number">3</button>
+                <button id="add" class="special">+</button>
+                <button id="zero" class="number special">0</button>
+                <button id="equals" class="special">=</button>
             </div>
         </main>
     </body>
