display first cut

--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
         <title>
             CalcUlatoR
         </title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Sirin+Stencil&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./styles/style.css">
         <link rel="stylesheet" href="./styles/button.css">
+        <link rel="stylesheet" href="./styles/display.css">
     </head>
     <body>
         <main>
             <div id="display">
-
+                <div id="warning"></div>
+                <div id="superscript"></div>
+                <div id="main-display">19347532150817415120358701325098172591238710329</div>
             </div>
             <div id="keypad">
                 <button id="all-clear" class="special">AC</button>
