Changes to display plus basic clickability

--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
     <body>
         <main>
             <div id="display">
-                <div id="warning"></div>
-                <div id="superscript"></div>
-                <div id="main-display">19347532150817415120358701325098172591238710329</div>
+                <div id="superscript">1934753215081741512035870132509817259123871032919347532150817415120358701325098172591238710329</div>
+                <div id="main-display">
+                    <div id="first"></div>
+                    <div id="operator"></div>
+                    <div id="second"></div>
+                </div>
             </div>
             <div id="keypad">
                 <button id="all-clear" class="special">AC</button>
@@ -39,5 +42,6 @@
                 <button id="equals" class="special">=</button>
             </div>
         </main>
+        <script src="./scripts/script.js"></script>
     </body>
 </html>
