Adding basic calculator functionality.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
                 <button id="equals" class="special">=</button>
             </div>
         </main>
+        <script src="./scripts/constants.js"></script>
+        <script src="./scripts/math.js"></script>
         <script src="./scripts/script.js"></script>
     </body>
 </html>
