--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         </main>
         <script src="./scripts/constants.js"></script>
         <script src="./scripts/math.js"></script>
+        <script src="./scripts/validate.js"></script>
         <script src="./scripts/script.js"></script>
     </body>
 </html>
