--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <main>
             <div id="display">
-                <div id="superscript">1934753215081741512035870132509817259123871032919347532150817415120358701325098172591238710329</div>
+                <div id="history"></div>
                 <div id="main-display">
                     <div id="first"></div>
                     <div id="operator"></div>
