Added decimal point

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                 <button id="two" class="number">2</button>
                 <button id="three" class="number">3</button>
                 <button id="add" class="special">+</button>
-                <button id="zero" class="number special">0</button>
+                <button id="zero" class="number">0</button>
+                <button id="decimal-point" class="special">.</button>
                 <button id="equals" class="special">=</button>
             </div>
         </main>
