--- a/index.html
+++ b/index.html
@@ -23,24 +23,24 @@
             </div>
             <div id="keypad">
                 <button id="all-clear" class="special">AC</button>
-                <button id="clear" class="special">C</button>
+                <button id="clear" data-key="8" class="special">C</button>
                 <button id="change-sign" class="special">+/-</button>
-                <button id="divide" class="special">/</button>
-                <button id="seven" class="number">7</button>
-                <button id="eight" class="number">8</button>
-                <button id="nine" class="number">9</button>
-                <button id="multiply" class="special">*</button>
-                <button id="four" class="number">4</button>
-                <button id="five" class="number">5</button>
-                <button id="six" class="number">6</button>
-                <button id="subtract" class="special">-</button>
-                <button id="one" class="number">1</button>
-                <button id="two" class="number">2</button>
-                <button id="three" class="number">3</button>
-                <button id="add" class="special">+</button>
-                <button id="zero" class="number">0</button>
-                <button id="decimal-point" class="special">.</button>
-                <button id="equals" class="special">=</button>
+                <button id="divide" data-key="111" class="special">/</button>
+                <button id="seven" data-key="103" class="number">7</button>
+                <button id="eight" data-key="104" class="number">8</button>
+                <button id="nine" data-key="105" class="number">9</button>
+                <button id="multiply" data-key="106" class="special">*</button>
+                <button id="four" data-key="100" class="number">4</button>
+                <button id="five" data-key="101" class="number">5</button>
+                <button id="six" data-key="102" class="number">6</button>
+                <button id="subtract" data-key="109" class="special">-</button>
+                <button id="one" data-key="97" class="number">1</button>
+                <button id="two" data-key="98" class="number">2</button>
+                <button id="three" data-key="99" class="number">3</button>
+                <button id="add" data-key="107" class="special">+</button>
+                <button id="zero" data-key="96" class="number">0</button>
+                <button id="decimal-point" data-key="110" class="special">.</button>
+                <button id="equals" data-key="13" class="special">=</button>
             </div>
         </main>
         <script src="./scripts/constants.js"></script>
