--- a/index.html
+++ b/index.html
@@ -22,28 +22,29 @@
                 </div>
             </div>
             <div id="keypad">
-                <button id="all-clear" class="special">AC</button>
-                <button id="clear" data-key="8" class="special">C</button>
-                <button id="change-sign" class="special">+/-</button>
-                <button id="divide" data-key="111" class="special">/</button>
-                <button id="seven" data-key="103" class="number">7</button>
-                <button id="eight" data-key="104" class="number">8</button>
-                <button id="nine" data-key="105" class="number">9</button>
-                <button id="multiply" data-key="106" class="special">*</button>
-                <button id="four" data-key="100" class="number">4</button>
-                <button id="five" data-key="101" class="number">5</button>
-                <button id="six" data-key="102" class="number">6</button>
-                <button id="subtract" data-key="109" class="special">-</button>
-                <button id="one" data-key="97" class="number">1</button>
-                <button id="two" data-key="98" class="number">2</button>
-                <button id="three" data-key="99" class="number">3</button>
-                <button id="add" data-key="107" class="special">+</button>
-                <button id="zero" data-key="96" class="number">0</button>
-                <button id="decimal-point" data-key="110" class="special">.</button>
-                <button id="equals" data-key="13" class="special">=</button>
+                <button id="all-clear" data-value="AC" class="special">AC</button>
+                <button id="clear" data-key="8" data-value="C" class="special">C</button>
+                <button id="change-sign" data-value="+/-" class="special">+/-</button>
+                <button id="divide" data-key="111" data-value="/" class="special">/</button>
+                <button id="seven" data-key="103" data-value="7" class="number">7</button>
+                <button id="eight" data-key="104" data-value="8" class="number">8</button>
+                <button id="nine" data-key="105" data-value="9" class="number">9</button>
+                <button id="multiply" data-key="106" data-value="*" class="special">*</button>
+                <button id="four" data-key="100" data-value="4" class="number">4</button>
+                <button id="five" data-key="101" data-value="5" class="number">5</button>
+                <button id="six" data-key="102" data-value="6" class="number">6</button>
+                <button id="subtract" data-key="109" data-value="-" class="special">-</button>
+                <button id="one" data-key="97" data-value="1" class="number">1</button>
+                <button id="two" data-key="98" data-value="2" class="number">2</button>
+                <button id="three" data-key="99" data-value="3" class="number">3</button>
+                <button id="add" data-key="107" data-value="+" class="special">+</button>
+                <button id="zero" data-key="96" data-value="0" class="number">0</button>
+                <button id="decimal-point" data-key="110" data-value="." class="special">.</button>
+                <button id="equals" data-key="13" data-value="=" class="special">=</button>
             </div>
         </main>
         <script src="./scripts/constants.js"></script>
+        <script src="./scripts/random.js"></script>
         <script src="./scripts/math.js"></script>
         <script src="./scripts/validate.js"></script>
         <script src="./scripts/script.js"></script>
